[Add] new add_contract function

--- a/examples/run_backtesting.ipynb
+++ b/examples/run_backtesting.ipynb
@@ -20,16 +20,20 @@
    "outputs": [],
    "source": [
     "engine = BacktestingEngine()\n",
+    "\n",
     "engine.set_parameters(\n",
-    "    vt_symbols=[\"BTCUSDT.BINANCE\"],\n",
     "    interval=Interval.MINUTE,\n",
     "    start=datetime(2022, 1, 1),\n",
     "    end=datetime.now(),\n",
     "    capital=1_000_000,\n",
-    "    priceticks={\"BTCUSDT.BINANCE\": 0.01},\n",
-    "    sizes={\"BTCUSDT.BINANCE\": 1},\n",
-    "    rates={\"BTCUSDT.BINANCE\": 0},\n",
-    "    slippages={\"BTCUSDT.BINANCE\": 0.01}\n",
+    ")\n",
+    "\n",
+    "engine.add_contract(\n",
+    "    \"BTCUSDT.BINANCE\",\n",
+    "    pricetick=0.01,\n",
+    "    size=1,\n",
+    "    rate=0,\n",
+    "    slippage=0.01\n",
     ")"
    ]
   },
@@ -56,9 +60,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-07-23 22:37:08.004517\tLoading history data.\n",
-      "2024-07-23 22:37:15.238149\tBar data of BTCUSDT.BINANCE loaded, total count: 1.\n",
-      "2024-07-23 22:37:15.238149\tHistory data all loaded.\n"
+      "2024-07-26 17:17:58.962519\tLoading history data.\n",
+      "2024-07-26 17:18:05.957543\tBar data of BTCUSDT.BINANCE loaded, total count: 1.\n",
+      "2024-07-26 17:18:05.957543\tHistory data all loaded.\n"
      ]
     }
    ],
@@ -75,9 +79,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-07-23 22:37:15.398714\tThe strategy is inited.\n",
-      "2024-07-23 22:37:15.398714\tStarting to replay history data.\n",
-      "2024-07-23 22:37:42.271893\tReplaying history data finished.\n"
+      "2024-07-26 17:18:06.109786\tThe strategy is inited.\n",
+      "2024-07-26 17:18:06.110716\tStarting to replay history data.\n",
+      "2024-07-26 17:18:30.939891\tReplaying history data finished.\n"
      ]
     }
    ],
@@ -94,8 +98,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-07-23 22:37:42.294492\tCalculating daily PnL.\n",
-      "2024-07-23 22:37:43.788078\tCalculation of daily PnL finished.\n"
+      "2024-07-26 17:18:30.969147\tCalculating daily PnL.\n",
+      "2024-07-26 17:18:32.348138\tCalculation of daily PnL finished.\n"
      ]
     },
     {
@@ -317,35 +321,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-07-23 22:37:43.810092\tCalculating performance statistics.\n",
-      "2024-07-23 22:37:43.816117\t------------------------------\n",
-      "2024-07-23 22:37:43.816117\tStart Date:\t2022-01-11\n",
-      "2024-07-23 22:37:43.816117\tEnd Date:\t2024-07-23\n",
-      "2024-07-23 22:37:43.816117\tTotal Days:\t923\n",
-      "2024-07-23 22:37:43.816117\tProfit Days:\t449\n",
-      "2024-07-23 22:37:43.816117\tLoss Days:\t474\n",
-      "2024-07-23 22:37:43.816117\tStart Balance:\t1,000,000.00\n",
-      "2024-07-23 22:37:43.816117\tEnd Balance:\t974,770.42\n",
-      "2024-07-23 22:37:43.816117\tTotal Return:\t-2.52%\n",
-      "2024-07-23 22:37:43.816117\tAnnual Return:\t-1.00%\n",
-      "2024-07-23 22:37:43.816117\tMax Drawdown: \t-56,547.50\n",
-      "2024-07-23 22:37:43.816117\tMax Drawdown(%): -5.52%\n",
-      "2024-07-23 22:37:43.816117\tMax Drawdown Duration: \t478\n",
-      "2024-07-23 22:37:43.816117\tTotal PnL:\t-25,229.58\n",
-      "2024-07-23 22:37:43.816117\tTotal Commission:\t0.00\n",
-      "2024-07-23 22:37:43.816117\tTotal Slippage:\t0.01\n",
-      "2024-07-23 22:37:43.816117\tTotal Turnover:\t40,880.43\n",
-      "2024-07-23 22:37:43.816117\tTotal Trades:\t1328991\n",
-      "2024-07-23 22:37:43.816117\tDaily PnL:\t-27.33\n",
-      "2024-07-23 22:37:43.816117\tDaily Commission:\t0.00\n",
-      "2024-07-23 22:37:43.816117\tDaily Slippage:\t0.00\n",
-      "2024-07-23 22:37:43.816117\tDaily Turnover:\t44.29\n",
-      "2024-07-23 22:37:43.816117\tDaily Trades:\t1439.860238353196\n",
-      "2024-07-23 22:37:43.816117\tDaily Return:\t-0.00%\n",
-      "2024-07-23 22:37:43.816117\tReturn Std:\t0.10%\n",
-      "2024-07-23 22:37:43.816117\tSharpe Ratio:\t-0.50\n",
-      "2024-07-23 22:37:43.816117\tReturn Drawdown Ratio:\t-0.45\n",
-      "2024-07-23 22:37:43.816117\tCalculation of performance statistics finished.\n"
+      "2024-07-26 17:18:32.380740\tCalculating performance statistics.\n",
+      "2024-07-26 17:18:32.388411\t------------------------------\n",
+      "2024-07-26 17:18:32.389405\tStart Date:\t2022-01-11\n",
+      "2024-07-26 17:18:32.389405\tEnd Date:\t2024-07-23\n",
+      "2024-07-26 17:18:32.389405\tTotal Days:\t923\n",
+      "2024-07-26 17:18:32.389405\tProfit Days:\t449\n",
+      "2024-07-26 17:18:32.389405\tLoss Days:\t474\n",
+      "2024-07-26 17:18:32.389405\tStart Balance:\t1,000,000.00\n",
+      "2024-07-26 17:18:32.389405\tEnd Balance:\t974,770.42\n",
+      "2024-07-26 17:18:32.389405\tTotal Return:\t-2.52%\n",
+      "2024-07-26 17:18:32.389405\tAnnual Return:\t-1.00%\n",
+      "2024-07-26 17:18:32.389405\tMax Drawdown: \t-56,547.50\n",
+      "2024-07-26 17:18:32.389405\tMax Drawdown(%): -5.52%\n",
+      "2024-07-26 17:18:32.389405\tMax Drawdown Duration: \t478\n",
+      "2024-07-26 17:18:32.389405\tTotal PnL:\t-25,229.58\n",
+      "2024-07-26 17:18:32.389405\tTotal Commission:\t0.00\n",
+      "2024-07-26 17:18:32.389405\tTotal Slippage:\t0.01\n",
+      "2024-07-26 17:18:32.389405\tTotal Turnover:\t40,880.43\n",
+      "2024-07-26 17:18:32.389405\tTotal Trades:\t1328991\n",
+      "2024-07-26 17:18:32.389405\tDaily PnL:\t-27.33\n",
+      "2024-07-26 17:18:32.389405\tDaily Commission:\t0.00\n",
+      "2024-07-26 17:18:32.389405\tDaily Slippage:\t0.00\n",
+      "2024-07-26 17:18:32.389405\tDaily Turnover:\t44.29\n",
+      "2024-07-26 17:18:32.389405\tDaily Trades:\t1439.860238353196\n",
+      "2024-07-26 17:18:32.389405\tDaily Return:\t-0.00%\n",
+      "2024-07-26 17:18:32.389405\tReturn Std:\t0.10%\n",
+      "2024-07-26 17:18:32.389405\tSharpe Ratio:\t-0.50\n",
+      "2024-07-26 17:18:32.389405\tReturn Drawdown Ratio:\t-0.45\n",
+      "2024-07-26 17:18:32.389405\tCalculation of performance statistics finished.\n"
      ]
     },
     {
