[Add] get_min_volume function

--- a/examples/trend_strategy/run_backtesting.ipynb
+++ b/examples/trend_strategy/run_backtesting.ipynb
@@ -36,6 +36,7 @@
     "    \"BTCUSDT.BINANCE\",\n",
     "    pricetick=0.01,\n",
     "    size=1,\n",
+    "    min_volume=0.01,\n",
     "    rate=0.014 / 100,\n",
     "    slippage=0.0\n",
     ")"
