[Mod] split data table into live and backtesting modes

--- a/examples/table_demo/table_demo.ipynb
+++ b/examples/table_demo/table_demo.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -45,14 +52,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialize table"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create table\n",
-    "from vnpy_novastrategy import DataTable\n",
+    "# Choose which table to test\n",
+    "from vnpy_novastrategy import (\n",
+    "    # LiveDataTable as DataTable,           \n",
+    "    BacktestingDataTable as DataTable\n",
+    ")\n",
     "\n",
+    "# Create table\n",
     "table = DataTable(\n",
     "    vt_symbols=vt_symbols,\n",
     "    size=200,\n",
@@ -63,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +184,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# For live trading usage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,12 +213,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# For backtesting usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update entire history into table\n",
+    "table.update_history(list(history.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update bars into table    \n",
+    "for dt, bars in history.items():\n",
+    "    table.update_bars(bars)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table.update_history(list(history.values()))"
+    "# Get latest dataframe\n",
+    "df = table.get_df()\n",
+    "df.tail(20)"
    ]
   },
   {
