--- a/examples/table_demo/table_demo.ipynb
+++ b/examples/table_demo/table_demo.ipynb
@@ -16,10 +16,10 @@
     "from datetime import datetime\n",
     "from collections import defaultdict\n",
     "\n",
-    "from vnpy_evo.trader.database import get_database, DB_TZ\n",
-    "from vnpy_evo.trader.constant import Interval\n",
-    "from vnpy_evo.trader.object import BarData\n",
-    "from vnpy_evo.trader.utility import extract_vt_symbol\n",
+    "from vnpy.trader.database import get_database, DB_TZ\n",
+    "from vnpy.trader.constant import Interval\n",
+    "from vnpy.trader.object import BarData\n",
+    "from vnpy.trader.utility import extract_vt_symbol\n",
     "\n",
     "db = get_database()"
    ]
@@ -160,7 +160,7 @@
     "\n",
     "table.add_feature(\"short_ma\", f\"ts_mean(close_price, {short_window})\")\n",
     "table.add_feature(\"long_ma\", f\"ts_mean(close_price, {long_window})\")\n",
-    "table.add_feature(\"buy_signal_mask\", f\"ts_greater_than(short_ma, long_ma) * ts_greater_than(close_price, short_ma)\")\n",
+    "table.add_feature(\"buy_signal_mask\", \"ts_greater_than(short_ma, long_ma) * ts_greater_than(close_price, short_ma)\")\n",
     "table.add_feature(\"buy_proportion\", f\"ts_sum(buy_signal_mask, {signal_window}) / {signal_window}\")\n",
     "table.add_feature(\"buy_signal_proportion_rank\", \"rank(buy_proportion)\")"
    ]
