[Mod] improve static type hinting

--- a/examples/table_demo/table_demo.ipynb
+++ b/examples/table_demo/table_demo.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,7 @@
     "    )\n",
     "\n",
     "    for bar in bars:\n",
-    "        history[bar.datetime][vt_symbol] = bar\n",
-    "            "
+    "        history[bar.datetime][vt_symbol] = bar\n"
    ]
   },
   {
@@ -66,7 +65,7 @@
    "source": [
     "# Choose which table to test\n",
     "from vnpy_novastrategy import (\n",
-    "    # LiveDataTable as DataTable,           \n",
+    "    # LiveDataTable as DataTable,\n",
     "    BacktestingDataTable as DataTable\n",
     ")\n",
     "\n",
@@ -210,8 +209,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update bars into table    \n",
-    "for dt, bars in history.items():\n",
+    "# Update bars into table\n",
+    "for bars in history.values():\n",
     "    table.update_bars(bars)"
    ]
   },
@@ -245,12 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update bars into table    \n",
-    "for dt, bars in history.items():\n",
+    "# Update bars into table\n",
+    "for bars in history.values():\n",
     "    table.update_bars(bars)"
    ]
   },
